python/testData/quickFixes/PyAddImportQuickFixTest/reexportedName/main.py
from flask import Flask

app = Flask(__name__)

<error descr="Unresolved reference 'request'"><caret>request</error>